--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,48 +3,34 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
+        <link th:href="@{/css/menu.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <!--<h1>Un cliente</h1>
-        <p>Nombre: <span th:text="${cliente.nombre}"></span></p>
-        <p>Apellidos: <span th:text="${cliente.apellidos}"></span></p>
-        <p>Correos: <span th:text="${cliente.correo}"></span></p>
-        <p>Telefono: <span th:text="${cliente.telefono}"></span></p>
-        <br>
-        <br>--> 
-
         <header th:replace="layout/plantilla :: header" />
-        <h2>Lista de clientes</h2>
-        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>
-        <br>
-        <br>
-        <div th:if="${clientes != null and !clientes.empty}">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Apellidos</th>
-                        <th>Correo</th>
-                        <th>Telefono</th>
-                        <th>Modificar</th>
-                        <th>Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="item : ${clientes}">
-                        <td th:text="${item.nombre}"></td>
-                        <td th:text="${item.apellidos}"></td>
-                        <td th:text="${item.correo}"></td>
-                        <td th:text="${item.telefono}"></td>
-                        <td><a th:href="@{/modificarCliente/} + ${item.idCliente}">Modificar</a></td>
-                        <td><a th:href="@{/eliminarCliente/} + ${item.idCliente}">Eliminar</a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
 
-        <div th:if="${clientes == null or clientes.empty}">
-            No tenemos lista de clientes para mostrar.
+        <div class="contenido">
+            <h2>Nuestros articulos</h2>
+            <div th:if="${articulos != null and !articulos.empty}">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Descripcion</th>
+                            <th>Precio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="item : ${articulos}">
+                            <td th:text="${item.descripcion}"></td>
+                            <td th:text="${#numbers.formatDecimal(item.precio, 3, 2)}"></td>
+                            <td><a href="@{carrito/agregar/} + ${item.idArticulo}">Agregar</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div th:if="${clientes == null or clientes.empty}">
+                No tenemos lista de clientes para mostrar.
+            </div>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
