Finalizacion clase semana 9

--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -6,12 +6,28 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <header th:fragment="header">
-            <h1 style="background-color: blue; color: white;">TechShop</h1>
+        <header th:fragment="header" class="header">
+            <nav class="nav">
+                <a th:ref="@{/}" class="logo nav-link">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item">
+                        <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.clientes}">Clientes</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.categorias}">Categoria</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.articulos}">Articulos</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
-        <footer th:fragment="footer">
-            <p>&COPY; Derechos Reservados 2022</p>
+        <footer th:fragment="footer" class="footer">
+            <p>&COPY; [[#{plantilla.derechos}]]
+                <a th:href="@{/(lang=es)}">ES</a> |
+                <a th:href="@{/(lang=en)}">EN</a>
+            </p>
         </footer>
     </body>
 </html>
