--- a/src/main/resources/templates/modificarCliente.html
+++ b/src/main/resources/templates/modificarCliente.html
@@ -9,24 +9,25 @@
         <header th:replace="layout/plantilla :: header" />
         <h2>Datos del cliente</h2>
         <a th:href="@{/}">Regresar</a>
-        <br>
-            <br>
-                <form th:action="@{/guardarCliente}"
-                      method="POST"
-                      th:object="${cliente}">
-                    <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" id="nombre" name="nombre" th:field="*{nombre}"/>
-                    <br>
-                        <label for="apellidos">Apellidos: </label>
-                        <input type="text" id="apellidos" name="apellidos" th:field="*{apellidos}"/>
-                        <br>
-                            <label for="correo">Correo: </label>
-                            <input type="email" id="correo" name="correo" th:field="*{correo}"/>
-                            <br>
-                                <label for="telefono">Telefono: </label>
-                                <input type="tel" id="telefono" name="telefono" th:field="*{telefono}"/>
-                                <br>
-                                    <input type="submit" name="guardar" value="Guardar" />
-                                    </body>
-                                    </html>
+        <br/>
+        <br/>
+        <form th:action="@{/guardarCliente}"
+              method="POST"
+              th:object="${cliente}">
+            <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
+            <label for="nombre">Nombre: </label>
+            <input type="text" id="nombre" name="nombre" th:field="*{nombre}"/>
+            <br/>
+            <label for="apellidos">Apellidos: </label>
+            <input type="text" id="apellidos" name="apellidos" th:field="*{apellidos}"/>
+            <br/>
+            <label for="correo">Correo: </label>
+            <input type="email" id="correo" name="correo" th:field="*{correo}"/>
+            <br/>
+            <label for="telefono">Telefono: </label>
+            <input type="tel" id="telefono" name="telefono" th:field="*{telefono}"/>
+            <br/>
+            <input type="submit" name="guardar" value="Guardar" />
+        </form>
+    </body>
+</html>
