--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -63,6 +63,7 @@ body{
     background-color: black;
     color: white;
     text-align: center;
+    position: fixed;
     height: 20px;
     bottom: 0;
     left: 0;
