--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link th:href="@{/css/menu.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace="layout/plantilla :: header" />
+        <h2 th:text="#{articulo.datos}">Datos del articulo</h2>
+        <a th:href="@{/articulo/listado}" th:text="#{accion.regresar}">Regresar</a>
+        <br/>
+        <br/>
+        <div class="contenido">
+            <form th:action="@{/articulo/guardar}"
+                  method="POST"
+                  th:object="${articulo}">
+                <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/>
+                <label for="nombre" th:text="#{articulo.categoria}">Categoria: </label>
+                <select th:field="*{idCategoria}">
+                    <option th:each="categoria : ${categorias}"
+                            th:value="${categoria.idCategoria}"
+                            th:text="${categoria.descripcion}"/>
+                </select>
+                <br/>
+                <label for="descripcion" th:text="#{articulo.descripcion}">Descripcion: </label>
+                <input type="text" id="descripcion" name="descripcion" th:field="*{descripcion}"/>
+                <br/>
+                <label for="detalle" th:text="#{articulo.detalle}">Detalle: </label>
+                <input type="text" id="detalle" name="detalle" th:field="*{detalle}"/>
+                <br/>
+                <label for="precio" th:text="#{articulo.precio}">Precio: </label>
+                <input type="number" id="precio" name="precio" th:field="*{precio}"/>
+                <br/>
+                <label for="existencias" th:text="#{articulo.existencias}">Existencias: </label>
+                <input type="number" id="existencias" name="existencias" th:field="*{existencias}"/>
+                <br/>
+                <label for="activo" th:text="#{articulo.activo}">Activo: </label>
+                <input type="checkbox" id="activo" name="activo" th:field="*{activo}"/>
+                <br/>
+                <input type="submit" name="guardar" th:value="#{accion.guardar}" />
+            </form>
+        </div>
+        <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
+
