--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Techshop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link th:href="@{/css/menu.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace="layout/plantilla :: header" />
+        <div class="contenido">
+            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2>
+            <div th:if="${clientes != null and !clientes.empty}">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th th:text="#{cliente.nombre}">Nombre</th>
+                            <th th:text="#{cliente.apellidos}">Apellidos</th>
+                            <th th:text="#{cliente.correo}">Correo</th>
+                            <th th:text="#{cliente.telefono}">Telefono</th>
+                            <th th:text="#{cliente.limite}">Limite</th>
+                            <th th:text="#{accion.actualizar}">Modificar</th>
+                            <th th:text="#{accion.eliminar}">Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="item : ${clientes}">
+                            <td th:text="${item.nombre}"></td>
+                            <td th:text="${item.apellidos}"></td>
+                            <td th:text="${item.correo}"></td>
+                            <td th:text="${item.telefono}"></td>
+                            <td th:text="${item.credito.limite}"></td>
+                            <td><a th:href="@{/cliente/modificar/} + ${item.idCliente}" th:text="#{accion.actualizar}">Modificar</a></td>
+                            <td><a th:href="@{/cliente/eliminar/} + ${item.idCliente}" th:text="#{accion.eliminar}">Eliminar</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div th:if="${clientes == null or clientes.empty}">
+                <p th:text="#{cliente.no_mostrar}"></p>
+            </div>
+        </div>
+        <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
