--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link th:href="@{/css/menu.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace="layout/plantilla :: header" />
+        <h2 th:text="#{cliente.datos}">Datos del cliente</h2>
+        <a th:href="@{/cliente/listado}" th:text="#{accion.regresar}">Regresar</a>
+        <br/>
+        <br/>
+        <div class="contenido">
+            <form th:action="@{/cliente/guardar}"
+                  method="POST"
+                  th:object="${cliente}">
+                <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
+                <label for="nombre" th:text="#{cliente.nombre}">Nombre: </label>
+                <input type="text" id="nombre" name="nombre" th:field="*{nombre}"/>
+                <br/>
+                <label for="apellidos" th:text="#{cliente.apellidos}">Apellidos: </label>
+                <input type="text" id="apellidos" name="apellidos" th:field="*{apellidos}"/>
+                <br/>
+                <label for="correo" th:text="#{cliente.correo}">Correo: </label>
+                <input type="email" id="correo" name="correo" th:field="*{correo}"/>
+                <br/>
+                <label for="telefono" th:text="#{cliente.telefono}">Telefono: </label>
+                <input type="tel" id="telefono" name="telefono" th:field="*{telefono}"/>
+                <br/>
+                <label for="limite" th:text="#{cliente.limite}">Limite: </label>
+                <input type="number" id="limite" name="limite" th:field="*{credito.limite}"/>
+                <br/>
+                <input type="submit" name="guardar" th:value="#{accion.guardar}"/>
+            </form>
+        </div>
+        <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
