--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,27 +9,28 @@
         <header th:replace="layout/plantilla :: header" />
 
         <div class="contenido">
-            <h2>Nuestros articulos</h2>
+            <h2 th:text="#{index.titulo}">Nuestros articulos</h2>
             <div th:if="${articulos != null and !articulos.empty}">
                 <table border="1">
                     <thead>
                         <tr>
-                            <th>Descripcion</th>
-                            <th>Precio</th>
+                            <th th:text="#{articulo.descripcion}">Descripcion</th>
+                            <th th:text="#{articulo.precio}">Precio</th>
+                            <th th:text="#{articulo.comprar}"></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:each="item : ${articulos}">
                             <td th:text="${item.descripcion}"></td>
                             <td th:text="${#numbers.formatDecimal(item.precio, 3, 2)}"></td>
-                            <td><a href="@{carrito/agregar/} + ${item.idArticulo}">Agregar</a></td>
+                            <td><a th:href="@{/carrito/agregar/} + ${item.idArticulo}" th:text="#{accion.agregar}">Agregar</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <div th:if="${clientes == null or clientes.empty}">
-                No tenemos lista de clientes para mostrar.
+            <div th:if="${articulos == null or articulos.empty}">
+                <p th:text="#{articulo.no_mostrar}"></p>
             </div>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
