Finalizacion clase semana 10

--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://thymeleaf.org/extras/spring-security">
     <head>
         <title>Techshop</title>
         <meta charset="UTF-8">
@@ -10,23 +10,23 @@
         <header th:replace="layout/plantilla :: header" />
         <div class="contenido">
             <h2 th:text="#{categoria.titulo}">Listado de Categorias</h2>
-            <a th:href="@{/categoria/nuevo}" th:text="#{categoria.nuevo}">Nueva Categoria</a>
+            <a th:href="@{/categoria/nuevo}" th:text="#{categoria.nuevo}" sec:authorize="hasRole('ROLE_ADMIN')">Nueva Categoria</a>
             <div th:if="${categorias != null and !categorias.empty}">
                 <table border="1">
                     <thead>
                         <tr>
                             <th th:text="#{categoria.descripcion}">Descripcion</th>
                             <th th:text="#{categoria.activo}">Activo</th>
-                            <th th:text="#{accion.actualizar}">Modificar</th>
-                            <th th:text="#{accion.eliminar}">Eliminar</th>
+                            <th th:text="#{accion.actualizar}" sec:authorize="hasRole('ROLE_ADMIN')">Modificar</th>
+                            <th th:text="#{accion.eliminar}" sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:each="item : ${categorias}">
                             <td th:text="${item.descripcion}"></td>
                             <td><input type="checkbox"name="activo" th:checked="${item.activo}" disabled="true"/></td>
-                            <td><a th:href="@{/categoria/modificar/} + ${item.idCategoria}" th:text="#{accion.actualizar}">Modificar</a></td>
-                            <td><a th:href="@{/categoria/eliminar/} + ${item.idCategoria}" th:text="#{accion.eliminar}">Eliminar</a></td>
+                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/categoria/modificar/} + ${item.idCategoria}" th:text="#{accion.actualizar}">Modificar</a></td>
+                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/categoria/eliminar/} + ${item.idCategoria}" th:text="#{accion.eliminar}">Eliminar</a></td>
                         </tr>
                     </tbody>
                 </table>
