--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,46 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://thymeleaf.org/extras/spring-security">
-    <head>
-        <title>Techshop</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link th:href="@{/css/menu.css}" rel="stylesheet" type="text/css"/>
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header" />
-        <div class="contenido">
-            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2>
-            <div th:if="${clientes != null and !clientes.empty}">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th th:text="#{cliente.nombre}">Nombre</th>
-                            <th th:text="#{cliente.apellidos}">Apellidos</th>
-                            <th th:text="#{cliente.correo}">Correo</th>
-                            <th th:text="#{cliente.telefono}">Telefono</th>
-                            <th th:text="#{cliente.limite}">Limite</th>
-                            <th th:text="#{accion.actualizar}" sec:authorize="hasRole('ROLE_ADMIN')">Modificar</th>
-                            <th th:text="#{accion.eliminar}" sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="item : ${clientes}">
-                            <td th:text="${item.nombre}"></td>
-                            <td th:text="${item.apellidos}"></td>
-                            <td th:text="${item.correo}"></td>
-                            <td th:text="${item.telefono}"></td>
-                            <td th:text="${item.credito.limite}"></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/modificar/} + ${item.idCliente}" th:text="#{accion.actualizar}">Modificar</a></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/eliminar/} + ${item.idCliente}" th:text="#{accion.eliminar}">Eliminar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            
-            <div th:if="${clientes == null or clientes.empty}">
-                <p th:text="#{cliente.no_mostrar}"></p>
-            </div>
-        </div>
-        <footer th:replace="layout/plantilla :: footer"/>
+
+        <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+        <section th:replace="cliente/fragmentosCliente :: agregarCliente"/>
+        <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
+    
 </html>
