--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,41 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-<html>
-    <head>
-        <title>TechShop</title>
-        <meta charset="UTF-8">
-            <style>
-                .contenido{
-                    text-align: center;
-                    border-radius: 20px;
-                    top: 50%;
-                    left: 50%;
-                    width: 400px;
-                    height: 250px;
-                    background-color: grey;
-                    position: fixed;
-                    overflow: auto;
-                }
-            </style>
-    </head>
-    <body>
-        <div class="contenido">
-            <h2 th:text="#{login.login}" style="text-align: center;">Login</h2>
-            <form method="POST" th:action="@{/login}">
-                <label th:text="#{login.username}">Username</label>
-                <br/>
-                <input type="text" name="username" id="username"/>
-                <br/>
-                <br/>
-                <label th:text="#{login.password}">Password</label>
-                <br/>
-                <input type="password" name="password" id="password"/>
-                <br/>
-                <br/>
-                <button type="submit" value="Login" th:text="#{login.login}">Login</button>
+    <html>
+        <head th:replace="layout/plantilla :: head">
+            <title>Login</title>
+        </head>
+        <body>
+            <header th:replace="layout/plantilla :: header"></header>
 
-            </form>
-        </div>
-    </body>
-</html>
+            <section id="actions" class="py-4 mb-4 bg-light">
+                <div class="container">
+                    <div class="row">                   
+                    </div>
+                </div>
+            </section>
+
+            <section id="login">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 mx-auto">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4>[[#{login.login}]]</h4>
+                                </div>
+                                <div class="card-body">
+                                    <form method="POST" th:action="@{/login}">
+                                        <div class="row py-1 mb-2 bg-light">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-3">
+                                                        <label for="username">[[#{login.username}]]:</label>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <input type="text" name="username" id="username"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row py-1 mb-2 bg-light">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-3">
+                                                        <label for="password">[[#{login.password}]]:</label>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <input type="password" name="password" id="password"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row  py-1 mb-2 bg-light">
+                                            <button type="submit" class="btn btn-primary btn-block">[[#{login.login}]]</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <footer th:replace="layout/plantilla :: footer"></footer>
+
+        </body>
+    </html>
